--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ body {
 
 @media screen and (max-width: 550px) {
   .section__padding {
-    padding: 2rem 2rem;
+    padding: 0.3rem;
   }
 
   .section__margin {
