--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -79,4 +79,31 @@
 .header__search-bar input::placeholder {
   color: white;
 }
+
+@media screen and (max-width: 650px) {
+  .header__logo h2 {
+    font-size: 12px;
+  }
+  .header__search h2 {
+    display: none;
+  }
+  .header__search-bar {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    font-size: 12px;
+  }
+  .header__search-bar input::-webkit-input-placeholder {
+    font-size: 10px;
+  }
+  .header__search-bar input:-ms-input-placeholder {
+    font-size: 10px;
+  }
+  .header__search-bar input::-ms-input-placeholder {
+    font-size: 10px;
+  }
+  .header__search-bar input::placeholder {
+    font-size: 10px;
+  }
+}
 /*# sourceMappingURL=styles.css.map */
